k8s/.nginx/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ns
spec:
  tls:
    - hosts:
        - netology-diploma.ru
        - "*.netology-diploma.ru"
      secretName: k8s-secret
  ingressClassName: nginx
  rules:
    - host: netology-diploma.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
